--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.17.1",
     "browserify": "^14.1.0",
     "express": "^4.15.2",
-    "request": "^2.81.0"
+    "sanitize-html": "^1.14.1",
+    "wreck": "^10.0.0"
   }
 }
