forward env variable for tp credentials

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     working_dir: /bughouse
     ports:
       - "3000:3000"
+    environment:
+      - TP_CREDENTIALS
     restart: always
     command: |
       bash -c 'bash -s <<EOF
